Task 2.1 mit Analysecode ergänzt

--- a/Python/Task2.1.ipynb
+++ b/Python/Task2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "24   5.7     3.2  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,13 +438,231 @@
     "\n",
     "#Datenset laden\n",
     "food_df = pd.read_csv(\"food.csv\")\n",
-    "\n",
-    "food_df"
+    "food_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25, 10)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0    0\n",
+       "RedMeat       0\n",
+       "WhiteMeat     0\n",
+       "Eggs          0\n",
+       "Milk          0\n",
+       "Fish          0\n",
+       "Cereals       0\n",
+       "Starch        0\n",
+       "Nuts          0\n",
+       "Fr.Veg        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RedMeat</th>\n",
+       "      <th>WhiteMeat</th>\n",
+       "      <th>Eggs</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Fish</th>\n",
+       "      <th>Cereals</th>\n",
+       "      <th>Starch</th>\n",
+       "      <th>Nuts</th>\n",
+       "      <th>Fr.Veg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>9.828000</td>\n",
+       "      <td>7.896000</td>\n",
+       "      <td>2.936000</td>\n",
+       "      <td>17.112000</td>\n",
+       "      <td>4.284000</td>\n",
+       "      <td>32.248000</td>\n",
+       "      <td>4.276000</td>\n",
+       "      <td>3.072000</td>\n",
+       "      <td>4.136000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.347078</td>\n",
+       "      <td>3.694081</td>\n",
+       "      <td>1.117617</td>\n",
+       "      <td>7.105416</td>\n",
+       "      <td>3.402533</td>\n",
+       "      <td>10.974786</td>\n",
+       "      <td>1.634085</td>\n",
+       "      <td>1.985682</td>\n",
+       "      <td>1.803903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>1.400000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>4.900000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>18.600000</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>1.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.800000</td>\n",
+       "      <td>4.900000</td>\n",
+       "      <td>2.700000</td>\n",
+       "      <td>11.100000</td>\n",
+       "      <td>2.100000</td>\n",
+       "      <td>24.300000</td>\n",
+       "      <td>3.100000</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>2.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>9.500000</td>\n",
+       "      <td>7.800000</td>\n",
+       "      <td>2.900000</td>\n",
+       "      <td>17.600000</td>\n",
+       "      <td>3.400000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>4.700000</td>\n",
+       "      <td>2.400000</td>\n",
+       "      <td>3.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>10.600000</td>\n",
+       "      <td>10.800000</td>\n",
+       "      <td>3.700000</td>\n",
+       "      <td>23.300000</td>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>40.100000</td>\n",
+       "      <td>5.700000</td>\n",
+       "      <td>4.700000</td>\n",
+       "      <td>4.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>4.700000</td>\n",
+       "      <td>33.700000</td>\n",
+       "      <td>14.200000</td>\n",
+       "      <td>56.700000</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>7.800000</td>\n",
+       "      <td>7.900000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         RedMeat  WhiteMeat       Eggs       Milk       Fish    Cereals  \\\n",
+       "count  25.000000  25.000000  25.000000  25.000000  25.000000  25.000000   \n",
+       "mean    9.828000   7.896000   2.936000  17.112000   4.284000  32.248000   \n",
+       "std     3.347078   3.694081   1.117617   7.105416   3.402533  10.974786   \n",
+       "min     4.400000   1.400000   0.500000   4.900000   0.200000  18.600000   \n",
+       "25%     7.800000   4.900000   2.700000  11.100000   2.100000  24.300000   \n",
+       "50%     9.500000   7.800000   2.900000  17.600000   3.400000  28.000000   \n",
+       "75%    10.600000  10.800000   3.700000  23.300000   5.800000  40.100000   \n",
+       "max    18.000000  14.000000   4.700000  33.700000  14.200000  56.700000   \n",
+       "\n",
+       "          Starch       Nuts     Fr.Veg  \n",
+       "count  25.000000  25.000000  25.000000  \n",
+       "mean    4.276000   3.072000   4.136000  \n",
+       "std     1.634085   1.985682   1.803903  \n",
+       "min     0.600000   0.700000   1.400000  \n",
+       "25%     3.100000   1.500000   2.900000  \n",
+       "50%     4.700000   2.400000   3.800000  \n",
+       "75%     5.700000   4.700000   4.900000  \n",
+       "max     6.500000   7.800000   7.900000  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +778,7 @@
        "4 -1.013588 -0.076947  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1220,7 @@
        "24  0.197261  0.152302      Yugoslavia  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
